data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_433.wast
;; 4. **Test Description**: Write a loop that re-declares a label in an inner scope with an invalid type, implicitly leading the outer loop to an `unreachable` instruction due to misconfigured branching.    - **Constraint**: Tests proper management and scoping of labels within nested loop structures.    - **Unreachable Code Execution**: Label conflicts should not cause paths to fall through to `unreachable`; correct label handling should trap or prevent execution deviation.

(assert_invalid
  (module
    (func
      (loop (result i32)
        (block (result i32) (br 1))
        (i32.const 0)
      )
      (unreachable)
    )
  )
  "type mismatch"
)